# rgr_shifr

./: CMakeCache.txt  CMakeLists.txt  DynamicLibrary.cpp  EncryptionAlgorithmRGR  FileProcessor.h  HexUtils.cpp  Makefile  README.md  cmake_install.cmake  vernam.cpp
EncryptionAlgorithmRGR_Aes/include/: CipherApi.h  CipherPlugin.h  DynamicLibrary.h  HexUtils.h
EncryptionAlgorithmRGR_Aes/plugins/vernam/: VernamCipher.cpp
EncryptionAlgorithmRGR_Aes/src/: main.cpp
aes/: AesCipher.cpp  CMakeLists.txt
gronsfeld/: GronsfeldCipher.cpp
src/: CipherPlugin.cpp  FileProcessor.cpp
test_files/: input.txt
